feat(gui): add InvUI launcher with Java 8 kit fallback
InvUI stays behind a reflective launcher so Java 8 servers never
class-load it. LegacyBotGui is the hook 1.16.5 will keep using.